--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Top-Down Mini Adventure</title>
+  <title>Celine Pacman</title>
   <style>
     :root {
       font-family: "Trebuchet MS", Arial, sans-serif;
@@ -13,10 +13,22 @@
 
     body {
       margin: 0;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 1rem;
+      padding: 5rem 1rem 2rem;
+      box-sizing: border-box;
+    }
+
+    .game-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+      width: min(100%, 760px);
     }
 
     canvas {
@@ -25,6 +37,10 @@
       image-rendering: pixelated;
       background: radial-gradient(circle at 20% 20%, #4f3c00, #120d00 65%);
       box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
+      width: min(100%, 720px);
+      max-height: min(70vh, 480px);
+      height: auto;
+      aspect-ratio: 3 / 2;
     }
 
     .overlay {
@@ -33,6 +49,7 @@
       left: 50%;
       transform: translateX(-50%);
       display: flex;
+      flex-wrap: wrap;
       gap: 1rem;
       padding: 0.55rem 1.1rem;
       background: rgba(90, 70, 0, 0.9);
@@ -42,15 +59,150 @@
       letter-spacing: 0.04em;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
       text-transform: uppercase;
+      max-width: calc(100% - 1.5rem);
+      justify-content: center;
+    }
+
+    .controls {
+      width: 100%;
+      max-width: 720px;
+      background: rgba(90, 70, 0, 0.92);
+      border: 1px solid rgba(255, 224, 102, 0.7);
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.65);
+      display: flex;
+      flex-direction: column;
+      gap: 0.75rem;
+    }
+
+    .control-group {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      gap: 0.5rem;
+      grid-auto-rows: minmax(0, 1fr);
+    }
+
+    .control-group--dpad {
+      grid-template-columns: repeat(3, minmax(70px, 1fr));
+      grid-template-rows: repeat(3, auto);
+      justify-items: stretch;
+      align-items: stretch;
+    }
+
+    .control-group--dpad .control-btn[data-key="ArrowUp"] {
+      grid-column: 2;
+      grid-row: 1;
+    }
+
+    .control-group--dpad .control-btn[data-key="ArrowLeft"] {
+      grid-column: 1;
+      grid-row: 2;
+    }
+
+    .control-group--dpad .control-btn[data-key="ArrowRight"] {
+      grid-column: 3;
+      grid-row: 2;
+    }
+
+    .control-group--dpad .control-btn[data-key="ArrowDown"] {
+      grid-column: 2;
+      grid-row: 3;
+    }
+
+    .control-btn {
+      font-size: 1.1rem;
+      font-weight: 700;
+      text-transform: uppercase;
+      padding: 0.65rem 0.5rem;
+      border-radius: 10px;
+      border: 1px solid rgba(255, 224, 102, 0.6);
+      background: linear-gradient(180deg, #ffef8c, #f5c045);
+      color: #382900;
+      letter-spacing: 0.05em;
+      cursor: pointer;
+      transition: transform 80ms ease, box-shadow 80ms ease;
+      touch-action: manipulation;
+    }
+
+    .control-btn:focus-visible {
+      outline: 3px solid #fff2a8;
+      outline-offset: 2px;
+    }
+
+    .control-btn.active {
+      transform: translateY(1px);
+      box-shadow: inset 0 4px 10px rgba(0, 0, 0, 0.35);
+    }
+
+    .control-btn.space {
+      grid-column: 2;
+      grid-row: 2;
+      font-size: 0.9rem;
+    }
+
+    .control-hint {
+      margin: 0;
+      font-size: 0.85rem;
+      text-align: center;
+      letter-spacing: 0.03em;
+      color: #ffefbf;
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 4rem 0.75rem 1.5rem;
+        gap: 0.75rem;
+      }
+
+      .overlay {
+        font-size: 0.82rem;
+        gap: 0.4rem;
+      }
+
+      .controls {
+        padding: 0.75rem;
+      }
+
+      .control-btn {
+        font-size: 0.95rem;
+        padding: 0.5rem 0.35rem;
+      }
+
+      canvas {
+        max-height: 55vh;
+      }
+    }
+
+    @media (max-height: 640px) {
+      body {
+        padding-top: 4rem;
+      }
+
+      canvas {
+        max-height: 55vh;
+      }
     }
   </style>
 </head>
 <body>
-  <canvas id="game" width="720" height="480" aria-label="Top-down adventure"></canvas>
   <div class="overlay">
     <span id="score">Score: 0</span>
     <span id="lives">Lives: 3</span>
-    <span id="message">Eat every gemstone: Diamond &gt; Ruby &gt; Sapphire &gt; Emerald.</span>
+    <span id="message">Celine Pacman: Eat every gemstone—Diamond &gt; Ruby &gt; Sapphire &gt; Emerald.</span>
+  </div>
+  <div class="game-wrapper">
+    <canvas id="game" width="720" height="480" aria-label="Celine Pacman playfield"></canvas>
+    <div class="controls" role="group" aria-label="On-screen controls">
+      <div class="control-group control-group--dpad" aria-label="Arrow keys with restart">
+        <button type="button" class="control-btn" data-key="ArrowUp" aria-label="Move up (Arrow Up)">↑</button>
+        <button type="button" class="control-btn" data-key="ArrowLeft" aria-label="Move left (Arrow Left)">←</button>
+        <button type="button" class="control-btn space" data-key="Space" aria-label="Space: start or restart Celine Pacman">Space / Restart</button>
+        <button type="button" class="control-btn" data-key="ArrowRight" aria-label="Move right (Arrow Right)">→</button>
+        <button type="button" class="control-btn" data-key="ArrowDown" aria-label="Move down (Arrow Down)">↓</button>
+      </div>
+      <p class="control-hint">Tap the arrows or center Space button to steer Celine Pacman.</p>
+    </div>
   </div>
   <script>
     const canvas = document.getElementById("game");
@@ -59,6 +211,7 @@
     const scoreEl = document.getElementById("score");
     const livesEl = document.getElementById("lives");
     const messageEl = document.getElementById("message");
+    const controlButtons = document.querySelectorAll(".control-btn");
 
     const tileSize = 48;
     const cols = canvas.width / tileSize;
@@ -157,10 +310,6 @@
       ArrowDown: { x: 0, y: 1 },
       ArrowLeft: { x: -1, y: 0 },
       ArrowRight: { x: 1, y: 0 },
-      w: { x: 0, y: -1 },
-      s: { x: 0, y: 1 },
-      a: { x: -1, y: 0 },
-      d: { x: 1, y: 0 },
     };
 
     const state = {
@@ -171,11 +320,36 @@
       powerTimer: 0,
     };
 
-    const defaultMessage = "Eat gems. Grab the apple to chomp ghosts!";
+    const defaultMessage = "Celine Pacman: eat gems and grab the apple to chomp ghosts!";
     let messageTimer = 0;
     let lastTime = 0;
     let mouthTicker = 0;
     let hitCooldown = 0;
+
+    function normalizeKeyInput(key) {
+      if (!key) return null;
+      if (key === "Spacebar" || key === "Space" || key === " ") {
+        return " ";
+      }
+      return key.length === 1 ? key.toLowerCase() : key;
+    }
+
+    function processInput(rawKey) {
+      const key = normalizeKeyInput(rawKey);
+      if (!key) return false;
+      if (key === " ") {
+        if (state.mode !== "play") {
+          startNewGame();
+        }
+        return true;
+      }
+      const dir = keyToDir[key] || keyToDir[rawKey];
+      if (dir) {
+        player.pendingDir = dir;
+        return true;
+      }
+      return false;
+    }
 
     function createBoard() {
       return baseLayout.map((row) => row.split(""));
@@ -828,18 +1002,20 @@
     }
 
     document.addEventListener("keydown", (event) => {
-      if (event.key === " ") {
+      if (processInput(event.key)) {
         event.preventDefault();
-        if (state.mode !== "play") {
-          startNewGame();
-        }
-        return;
       }
-      const dir = keyToDir[event.key];
-      if (dir) {
+    });
+
+    controlButtons.forEach((button) => {
+      button.addEventListener("pointerdown", (event) => {
         event.preventDefault();
-        player.pendingDir = dir;
-      }
+        button.classList.add("active");
+        processInput(button.dataset.key);
+      });
+      ["pointerup", "pointerleave", "pointercancel"].forEach((type) => {
+        button.addEventListener(type, () => button.classList.remove("active"));
+      });
     });
 
     startNewGame();
